src/components/account/onboarding/OnboardingForm.less
@import '../../../../resources/styles/_colours';
@import '../../../../resources/styles/_antd-theme.less';

.onboarding-form__ {

  &slide {

    &__invisible {
      visibility: hidden;
    }

  }
  &title {
    margin-bottom: 40px;
    animation: slide-in 0.5s 0s both;
    font-size: 24px;
    line-height: 28px;
  }

  &page-count {
    font-weight: bold;
    color: #6471A9;
    line-height: 24px;
  }

  &text {
    margin-bottom: 33px;
  }

  &notes {
    color: #6471A9;
    font-size: 14px;
  }

  &form {
    animation: slide-in 0.5s 0.4s both;
  }

  &asterisk {
    color: #6471A9;
    line-height: 30px;
    font-size: 16px;
    font-weight: 900;
  }

  &form-body {
    margin-top: 8px;

    .ant-checkbox-wrapper {
      display: flex;

      .ant-checkbox + span {
        padding-left: 12px;
      }
    }
  }

  &submit {
    //animation: slide-in 0.5s 0.8s both;
    float: right;
    width: 151px;
    margin-top: 47px;
  }
  &next {
    //animation: slide-in 0.5s 0.8s both;
    float: right;
    width: 151px;
    margin-top: 47px;
  }

  &existing {
    animation: slide-in 0.5s 1.2s both;
    width: 100%;
    padding-top: 20px;
    text-align: center;
    border-top: 1px solid @shade-2;
  }


  &back {
    width: 151px;
    float: left;
    margin-top: 47px;
  }

  &inline-item.ant-row.ant-form-item {
    margin-bottom: 0;
  }

  @media (min-width: @screen-md) {
    &inline-item--right {
      margin-left: 8px;
    }

    &inline-item--left {
      margin-right: 8px;
    }
  }

  &checkbox,
  &checkbox-link {
    color: @blue-grey;
    font-size: 14px;
    line-height: 16px;
  }
}

.ant-form-item-required::before {
  color: #6471A9;
  line-height: 30px;
  font-size: 16px;
  font-weight: 900;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  border: 0;
}

.name-form__ {
  &first-name {
    margin: 0 4px;
    width: 290px;

    @media (max-width: @screen-sm-max) {
    width:100%
    }
  }

  &last-name {
    margin: 0 4px;
    width: 290px;

    @media (max-width: @screen-sm-max) {
      width: 100%
    }
  }
}

